📝 add a lot of content to test propertly

--- a/assets/components/atoms/button/button-danger.twig
+++ b/assets/components/atoms/button/button-danger.twig
@@ -1,2 +1,1 @@
-<a href="#/pages/homepage" class="button"><strong><i>Salut l'ami</i></strong></a><br><br>
-<a href="#/pages/homepage" class="button">bisou</strong></a>
+<button>danger {{label}}</button>
