--- a/assets/components/organisms/header/header.twig
+++ b/assets/components/organisms/header/header.twig
@@ -1,4 +1,4 @@
 <header>
-  <h1>My website</h1>
+  {% include "@blocks/heading/heading.twig" %}
   {% include "molecules::search/search.twig" %}
 </header>
